Nocab added two stress tests